<resources>
    <string name="app_name">Lake &amp; Bean Brew</string>
    <string name="brown_sugar_cold_brew">Brown Sugar Cold Brew</string>
    <string name="caramel_frappuccino">Caramel Frappuccino</string>
    <string name="chocolate_truffle_mocha">Chocolate Truffle Mocha</string>
    <string name="iced_vanilla_frappuccino">Iced Vanilla Frappuccino</string>
    <string name="chicago_background">chicago_background</string>
    <string name="sip_relax_repeat">Sip. Relax. Repeat</string>
    <string name="great_coffee_better_chicago">Great coffee. A better Chicago</string>
    <string name="home_icon">Home</string>
    <string name="order_icon">Order</string>
    <string name="our_menu">Our Menu</string>
    <string name="arrow">›</string>
    <string name="Chicago_inspired_coffee">Chicago inspired coffee.</string>
    <string name="Crafted_for_your_day">Crafted for your day.</string>
    <string name="Sweet_caramel_bold_coffee_pure_bliss...">Sweet caramel, bold coffee, pure bliss...</string>
    <string name="Smooth_cold_brew_with_sweet_brown_sugar.">Smooth cold brew with sweet brown sugar</string>
<string name="Rich_chocolate_velvety_mocha_pure_indulgence.">Rich chocolate, velvety mocha, pure indulgence</string>
    <string name="Creamy_real_vanilla_frosty_bliss_in_every_sip.">Creamy real vanilla, frosty bliss in every sip.</string>

</resources>