<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F0E6"
    android:fontFamily="@font/playfair_display"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/home_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/chicago_background"
        android:scaleType="centerCrop"
        android:alpha="0.75"
        android:contentDescription="@string/chicago_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/halfway_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/halfway_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"/>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="35dp"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:cardBackgroundColor="@android:color/white"
        tools:ignore="MissingConstraints"
        app:cardElevation="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@id/halfway_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_sip_relax_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display"
            android:gravity="center"
            android:text="@string/sip_relax_repeat"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:padding="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/great_coffee_a_better_chicago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display"
            android:gravity="center"
            android:text="@string/great_coffee_better_chicago"
            android:textSize="20sp"
            android:paddingTop="70dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="120dp"
            android:gravity="center"
            android:columnCount="2"
            android:rowCount="2"
            android:padding="2dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_cinnamon_latte"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="0"

                android:layout_margin="6dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/brown_sugar_cold_brew"
                android:src="@drawable/brown_sugar_brew"
                app:shapeAppearanceOverlay="@style/RoundedImageCorners" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_frappuccino"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_margin="6dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/caramel_frappuccino"
                android:src="@drawable/caramel_frappuccino"
                app:shapeAppearanceOverlay="@style/RoundedImageCorners" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_mocha_chocolate"
                android:layout_height="100dp"
                android:layout_width="180dp"
                android:layout_margin="6dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/chocolate_truffle_mocha"
                android:src="@drawable/chocolate_truffle_mocha"
                app:shapeAppearanceOverlay="@style/RoundedImageCorners" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_vanilla"
                android:layout_width="180dp"
                android:layout_margin="6dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/iced_vanilla_frappuccino"
                android:src="@drawable/iced_vanilla_frappuccino"
                app:shapeAppearanceOverlay="@style/RoundedImageCorners" />

        </GridLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/bottom_controls"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center"

        android:elevation="10dp"
        android:background="@drawable/bottom_green_controls"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/img_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_icon"
            android:textColor="@android:color/white"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            app:drawableTopCompat="@drawable/baseline_home_24" />

        <TextView
            android:id="@+id/img_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_icon"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:textColor="@android:color/white"
            app:drawableTopCompat="@drawable/ic_coffee_cup" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>